test/spec_vectors/simd_bit_shift/fail/module_40.wat
(module (func $i64x2.shr_s-arg-empty (result v128) (i64x2.shr_s)))